# TestEmulator

./: CMakeLists.txt  README.md  run_emulator_socket.sh
src/: bonus_emulator_socket.cpp  emulator_fork.cpp  prompt_programm.c  utils.hpp
